--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+rand = "0.9.0"
 thiserror = "2.0.11"
 uuid = { version = "1.12.1", features = ["v4"] }
